--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,20 @@
 language: python
 python:
-  - '2.7'
-  - '3.3'
-  - pypy
+- '2.7'
+- '3.3'
+- pypy
 script:
-  - ./setup.py install
-  - "bash -c 'forward_socket; [[ $? -eq 2 ]]'"
-  - ./_travis_check_tags.sh
+- ./setup.py sdist
+- ./setup.py install
+- bash -c 'forward_socket; [[ $? -eq 2 ]]'
 deploy:
   provider: pypi
   user: thatpanda
-  password: "FAtNKkMfPALqOR8zchvdkX/e6/z5YxA2sqAC3c67HrEV1KzousoETg2s2zm/+5WW+QkL722LQNvzj6EBAoH8OJe5saXIGXTRyheMW0/2FHlYpdp3e+gcTUs8C7VeICvsQtclmbcq0ucUCsI9jOS7JseQ9SVYjAL6w5s0hNFnzwg="
+  password:
+    secure: Y8BEt2tEkXOuIVXJROQ6oV7WlnvU6JMGl5WWuQc+Rud2N9c+1oa+BotM64MtUouTLxRuxY23imexllYy7laYBtAs1NJljThz5bCGGjLoltaTzpq+AB+qo6bPoKEoEC+x3y4ihLcTIhk+sdGaxPwtJ8QWZR5zwTOB7PFUHAmF/AA=
   on:
     tags: true
     all_branches: true
+    repo: RickyCook/ssh-forward-unix-socket
+    condition: '"$TRAVIS_TAG" = "v$(python setup.py --version)"'
     python: 3.3
